Changelog
=========

1.0b15 - unreleased
-------------------

* AJAX form handling was busted in Safari by submit button marshaling
  fix. Found a hopefully more general solution for finding submit
  button name and value.
  [smcmahon]

* beforepost and afterpost callback options weren't working. fixed.
  [smcmahon]

* Recover when jQuery tries to throw away error responses in ajax loads.
  [smcmahon]

* Circumvent double-submit warning for AJAX forms.
  [smcmahon]
  
* Use the $ convention for jQuery.
  [smcmahon]

1.0b14 - 2010-10-27
-------------------

* Add beforepost and afterpost callback options for ajax forms.
  [smcmahon]

* Change reload strategy to set location to current href rather than using
  reload, which can cause repost queries on some browsers.
  [smcmahon]

1.0b13 - 2010-01-22
-------------------

* Fixed marshaling of submit buttons on AJAX submit when form has multiple
  buttons.
  [smcmahon]

1.0b12 - 2010-01-11
-------------------

* Allow noform and redirect options to be specified as callback functions.
  This will allow building in more smarts about what to do when ajax
  forms finish.
  [smcmahon]

* Avoid clobbering the onLoad config option if it is passed to prepOverlay.
  [davisagli]

1.0b11 - 2009-12-27
-------------------

* Declared all package dependencies and avoid unused imports inside tests.
  [hannosch]

1.0b10 - 2009-12-18
-------------------

* Add plugins resource and graphics directory.

* Update jqtools to use tooltips 1.1.3

1.0b9
-----

* Avoid overlay helper errors in Plone 3.x when trying to handle tabbed
  forms.

1.0b8
-----

* Check 'action' attribute for url, enabling simple forms to open overlays.

1.0b7
-----

* Initialize form tabbing on ajax form load.

* Marshall submit button values in ajax form submit, since jQuery
  doesn't include them.

1.0b6
-----

 * Document use of overlay helper.

1.0b5
-----

 * Integrate overlay helpers originally developed in pipbox. These